Gnash 0.8.11
YYYY/MM/DD

Caveats:
* The in-tree copy of jemalloc has been removed in preference to linking
  the system-installed jemalloc library.
* The minimum required version of FFMPEG/libavcodec (if available) is
  53.35.0.
* Extensions support is now disabled by default.
* The minimum GCC version required to build Gnash is 4.6.0.

Improvements since 0.8.10 release are:

 * Fix possible out-of-bound read in parser (#43865)
 * Fix opening of external URL with Gnash Standalone (#31833)
 * Stability fixes in image handling, (CVE-2012-1175, #39388, #37629).
 * Stability fixes in parsing (#34686) and ActionScript handling (#39385,
   #39404).
 * NPAPI Plugin stability fix (#36002, #42199) and a file descriptor leak.
 * Improved NetStream ActionScript class support.
 * Add support for IPv6 [TODO: affects Socket/XML, and what else?].
 * Fix build against recent Boost, FFMPEG and libav.
 * Fix support for GIFLIB-5.0 (#39482) and GIFLIB-5.1 (#42574)
 * Fix regression in dynamic sound loading (#33760).
 * Fix infinite loop in GC mark phase for XML object (#40440)
 * Fix segfault on exit when using XML (#40439)
 * Incremental decoding of embedded sounds (#24638, #25456)
 * Fix many issues reported by Coverity.
 * Add support for RTMP streaming (patch #8086).
 * Portability fixes for Debian GNU/kOpenSolaris and ARM.
 * TextFormat.getTextExtent has been much improved.
 * Fix playback of some dynamic sounds (#33760).

Gnash 0.8.10
2012/02/04

Improvements since 0.8.9 release are:

 * Qt4 GUI supports mouse wheel, clipboard, and screen resolution.
 * Enhanced UI support for script limits (abort popups, user prefs).
 * BitmapData functions copyPixels(), copyChannel(), perlinNoise() and noise() 
   implemented.
 * Node id mapping in ActionScript XML class implemented (XML.idMap).
 * Fix dispatching of Sound.onLoad event, fixing google dict audio.
 * Fix support for control tags found after last expected frame (#33176).