@@ -11,6 +11,7 @@ Caveats:
 
 Improvements since 0.8.10 release are:
 
+ * Fix callback registration issue in ExternalInterface (#37223)
  * Fix possible out-of-bound read in parser (#43865)
  * Fix opening of external URL with Gnash Standalone (#31833)
  * Stability fixes in image handling, (CVE-2012-1175, #39388, #37629).
